lib/src/generated/executorch_ffi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
// Generated by ffigen.
//
// FFI bindings for ExecuTorch Flutter
// See: src/executorch_ffi.h

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:executorch_flutter/executorch_flutter.dart')
library;

import 'dart:ffi' as ffi;
import '' as self;

/// Free status structure and its strings.
/// Safe to call with NULL.
@ffi.Native<ffi.Void Function(ffi.Pointer<ETStatus>)>()
external void et_status_free(
  ffi.Pointer<ETStatus> status,
);

/// Create a tensor from data.
///
/// @param data      Pointer to tensor data (copied)
/// @param data_size Size of data in bytes
/// @param shape     Array of dimension sizes
/// @param rank      Number of dimensions
/// @param dtype     Data type
/// @param out       Output tensor handle
/// @return Status (caller must free)
///
/// Memory: data is copied, caller retains ownership of original
@ffi.Native<
    ffi.Pointer<ETStatus> Function(
        ffi.Pointer<ffi.Void>,
        ffi.Size,
        ffi.Pointer<ffi.Int64>,
        ffi.Int32,
        ffi.UnsignedInt,
        ffi.Pointer<ffi.Pointer<ETTensor>>)>(symbol: 'et_tensor_create')
external ffi.Pointer<ETStatus> _et_tensor_create(
  ffi.Pointer<ffi.Void> data,
  int data_size,
  ffi.Pointer<ffi.Int64> shape,
  int rank,
  int dtype,
  ffi.Pointer<ffi.Pointer<ETTensor>> out,
);

ffi.Pointer<ETStatus> et_tensor_create(
  ffi.Pointer<ffi.Void> data,
  int data_size,
  ffi.Pointer<ffi.Int64> shape,
  int rank,
  ETDType dtype,
  ffi.Pointer<ffi.Pointer<ETTensor>> out,
) =>
    _et_tensor_create(
      data,
      data_size,
      shape,
      rank,
      dtype.value,
      out,
    );

/// Get tensor data type.
@ffi.Native<ffi.UnsignedInt Function(ffi.Pointer<ETTensor>)>(
    symbol: 'et_tensor_dtype', isLeaf: true)
external int _et_tensor_dtype(
  ffi.Pointer<ETTensor> tensor,
);

ETDType et_tensor_dtype(
  ffi.Pointer<ETTensor> tensor,
) =>
    ETDType.fromValue(_et_tensor_dtype(
      tensor,
    ));

/// Get tensor rank (number of dimensions).
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ETTensor>)>(isLeaf: true)
external int et_tensor_rank(
  ffi.Pointer<ETTensor> tensor,
);

/// Get tensor shape array.
///
/// @return Pointer to internal shape array (do not free)
@ffi.Native<ffi.Pointer<ffi.Int64> Function(ffi.Pointer<ETTensor>)>(
    isLeaf: true)
external ffi.Pointer<ffi.Int64> et_tensor_shape(
  ffi.Pointer<ETTensor> tensor,
);

/// Get tensor data size in bytes.
@ffi.Native<ffi.Size Function(ffi.Pointer<ETTensor>)>(isLeaf: true)
external int et_tensor_data_size(
  ffi.Pointer<ETTensor> tensor,
);

/// Get tensor data pointer.
///
/// @return Pointer to internal data (do not free, valid until tensor freed)
@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ETTensor>)>(isLeaf: true)
external ffi.Pointer<ffi.Void> et_tensor_data(
  ffi.Pointer<ETTensor> tensor,
);

/// Free tensor handle.
/// Safe to call with NULL.
@ffi.Native<ffi.Void Function(ffi.Pointer<ETTensor>)>()
external void et_tensor_free(
  ffi.Pointer<ETTensor> tensor,
);

/// Load model from memory buffer.
///
/// @param data       Model data (.pte format)
/// @param data_size  Size of model data
/// @param out        Output module handle
/// @return Status (caller must free)
///
/// Memory: data is not retained after function returns
/// Thread Safety: Function is thread-safe
@ffi.Native<
    ffi.Pointer<ETStatus> Function(
        ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Pointer<ffi.Pointer<ETModule>>)>()
external ffi.Pointer<ETStatus> et_module_load(
  ffi.Pointer<ffi.Uint8> data,
  int data_size,
  ffi.Pointer<ffi.Pointer<ETModule>> out,
);

/// Load model from file path.
///
/// @param path   Path to .pte model file
/// @param out    Output module handle
/// @return Status (caller must free)
@ffi.Native<
    ffi.Pointer<ETStatus> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ETModule>>)>()
external ffi.Pointer<ETStatus> et_module_load_file(
  ffi.Pointer<ffi.Char> path,
  ffi.Pointer<ffi.Pointer<ETModule>> out,
);

/// Get number of model inputs.
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ETModule>)>(isLeaf: true)
external int et_module_input_count(
  ffi.Pointer<ETModule> module,
);

/// Get number of model outputs.
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ETModule>)>(isLeaf: true)
external int et_module_output_count(
  ffi.Pointer<ETModule> module,
);

/// Run forward pass (inference).
///
/// @param module       Module handle
/// @param inputs       Array of input tensor handles
/// @param input_count  Number of inputs
/// @param outputs      Output array of tensor handles (caller must free array and tensors)
/// @param output_count Output number of outputs
/// @return Status (caller must free)
///
/// Memory: outputs array and tensors allocated by callee, caller must free
/// Thread Safety: Not thread-safe for same module, use mutex if concurrent
@ffi.Native<
    ffi.Pointer<ETStatus> Function(
        ffi.Pointer<ETModule>,
        ffi.Pointer<ffi.Pointer<ETTensor>>,
        ffi.Int32,
        ffi.Pointer<ffi.Pointer<ffi.Pointer<ETTensor>>>,
        ffi.Pointer<ffi.Int32>)>()
external ffi.Pointer<ETStatus> et_module_forward(
  ffi.Pointer<ETModule> module,
  ffi.Pointer<ffi.Pointer<ETTensor>> inputs,
  int input_count,
  ffi.Pointer<ffi.Pointer<ffi.Pointer<ETTensor>>> outputs,
  ffi.Pointer<ffi.Int32> output_count,
);

/// Free module handle.
/// Safe to call with NULL.
@ffi.Native<ffi.Void Function(ffi.Pointer<ETModule>)>()
external void et_module_free(
  ffi.Pointer<ETModule> module,
);

/// Check if backend is available (compiled in).
///
/// @param backend  Backend to check
/// @return 1 if available, 0 if not
@ffi.Native<ffi.Int32 Function(ffi.UnsignedInt)>(
    symbol: 'et_backend_available', isLeaf: true)
external int _et_backend_available(
  int backend,
);

int et_backend_available(
  ETBackend backend,
) =>
    _et_backend_available(
      backend.value,
    );

/// Get list of available backends.
///
/// @param out        Output array of backends (caller allocates, max 16 elements)
/// @param max_count  Maximum number of backends to return
/// @return Number of available backends
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.UnsignedInt>, ffi.Int32)>(
    isLeaf: true)
external int et_backend_list(
  ffi.Pointer<ffi.UnsignedInt> out,
  int max_count,
);

/// Get library version string.
///
/// @return Version string (do not free)
@ffi.Native<ffi.Pointer<ffi.Char> Function()>(isLeaf: true)
external ffi.Pointer<ffi.Char> et_version();

/// Get linked ExecuTorch version string.
///
/// @return Version string (do not free)
@ffi.Native<ffi.Pointer<ffi.Char> Function()>(isLeaf: true)
external ffi.Pointer<ffi.Char> et_executorch_version();

/// Free an array of tensors.
///
/// @param tensors  Array of tensor handles
/// @param count    Number of tensors
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Pointer<ETTensor>>, ffi.Int32)>()
external void et_tensor_array_free(
  ffi.Pointer<ffi.Pointer<ETTensor>> tensors,
  int count,
);

/// Free a string allocated by this library.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void et_string_free(
  ffi.Pointer<ffi.Char> str,
);

/// Enable or disable debug logging.
///
/// @param enabled  0=off, non-zero=on
@ffi.Native<ffi.Void Function(ffi.Int32)>()
external void et_set_debug_enabled(
  int enabled,
);

const addresses = _SymbolAddresses();

class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ETStatus>)>>
      get et_status_free => ffi.Native.addressOf(self.et_status_free);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ETTensor>)>>
      get et_tensor_free => ffi.Native.addressOf(self.et_tensor_free);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ETModule>)>>
      get et_module_free => ffi.Native.addressOf(self.et_module_free);
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

/// Error codes returned by FFI functions.
enum ETErrorCode {
  /// < Success
  ET_OK(0),

  /// < Invalid function argument
  ET_INVALID_ARGUMENT(1),

  /// < Memory allocation failed
  ET_OUT_OF_MEMORY(2),

  /// < Model loading failed
  ET_MODEL_LOAD_FAILED(3),

  /// < Forward pass failed
  ET_INFERENCE_FAILED(4),

  /// < Invalid object state
  ET_INVALID_STATE(5),

  /// < Unsupported operation
  ET_UNSUPPORTED(6),

  /// < I/O error
  ET_IO_ERROR(7),

  /// < Internal error
  ET_INTERNAL(99);

  final int value;
  const ETErrorCode(this.value);

  static ETErrorCode fromValue(int value) => switch (value) {
        0 => ET_OK,
        1 => ET_INVALID_ARGUMENT,
        2 => ET_OUT_OF_MEMORY,
        3 => ET_MODEL_LOAD_FAILED,
        4 => ET_INFERENCE_FAILED,
        5 => ET_INVALID_STATE,
        6 => ET_UNSUPPORTED,
        7 => ET_IO_ERROR,
        99 => ET_INTERNAL,
        _ => throw ArgumentError('Unknown value for ETErrorCode: $value'),
      };
}

/// Status structure for error handling.
///
/// When code is ET_OK, message and location are NULL.
/// When code is non-zero, message contains error description.
/// Caller must free with et_status_free().
final class ETStatus extends ffi.Struct {
  /// < Error code (0 = success)
  @ffi.Int32()
  external int code;

  /// < Error message (heap allocated, may be NULL)
  external ffi.Pointer<ffi.Char> message;

  /// < Source location "file:line:func" (may be NULL)
  external ffi.Pointer<ffi.Char> location;
}

/// Tensor data types.
enum ETDType {
  ET_DTYPE_FLOAT32(0),
  ET_DTYPE_FLOAT64(1),
  ET_DTYPE_INT64(2),
  ET_DTYPE_INT32(3),
  ET_DTYPE_INT16(4),
  ET_DTYPE_INT8(5),
  ET_DTYPE_UINT8(6),
  ET_DTYPE_BOOL(7);

  final int value;
  const ETDType(this.value);

  static ETDType fromValue(int value) => switch (value) {
        0 => ET_DTYPE_FLOAT32,
        1 => ET_DTYPE_FLOAT64,
        2 => ET_DTYPE_INT64,
        3 => ET_DTYPE_INT32,
        4 => ET_DTYPE_INT16,
        5 => ET_DTYPE_INT8,
        6 => ET_DTYPE_UINT8,
        7 => ET_DTYPE_BOOL,
        _ => throw ArgumentError('Unknown value for ETDType: $value'),
      };
}

final class ETTensor extends ffi.Opaque {}

final class ETModule extends ffi.Opaque {}

/// Backend identifiers.
enum ETBackend {
  ET_BACKEND_XNNPACK(0),
  ET_BACKEND_COREML(1),
  ET_BACKEND_MPS(2),
  ET_BACKEND_VULKAN(3),
  ET_BACKEND_QNN(4);

  final int value;
  const ETBackend(this.value);

  static ETBackend fromValue(int value) => switch (value) {
        0 => ET_BACKEND_XNNPACK,
        1 => ET_BACKEND_COREML,
        2 => ET_BACKEND_MPS,
        3 => ET_BACKEND_VULKAN,
        4 => ET_BACKEND_QNN,
        _ => throw ArgumentError('Unknown value for ETBackend: $value'),
      };
}

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int NULL = 0;

const int USER_ADDR_NULL = 0;
